@@ -306,7 +306,7 @@ AC_PROG_MAKE_SET
 AC_CHECK_HEADERS_ONCE([
   dirent.h fcntl.h limits.h mach/mach.h net/errno.h
   pwd.h siginfo.h signal.h
-  sys/mman.h sys/wait.h ucontext.h unistd.h utime.h vfork.h
+  sys/mman.h sys/wait.h ucontext.h unistd.h utime.h
 ])
 
 # types -- see also: (info "(autoconf) Particular Types")
@@ -326,6 +326,7 @@ AC_CHECK_TYPE([sig_atomic_t],,[dnl
 
 # funcs
 
+AC_FUNC_FORK
 AC_CHECK_FUNCS_ONCE([
   fchmod
   getcwd
