@@ -227,6 +227,7 @@ echo >&3 $CS
 # standard include files
 # This list must be synced with ../configure.in, q.v.
 # (That is, the one in ../configure.in should be a superset of this one.)
+# (The unique exception is vfork, which is checked as part of AC_FUNC_FORK.)
 has_signal=1
 for h in \
 	fcntl limits mach/mach net/errno \
@@ -932,103 +933,7 @@ rm -f a.c || exit
 echo >&3 $ok
 echo "#define bad_unlink $b /* Does unlink() fail on unwritable files?  */"
 
-$ech >&3 "$0: configuring has_vfork $dots"
-cat >a.c <<EOF
-#include "$A_H"
-#ifndef STDOUT_FILENO
-#define STDOUT_FILENO 1
-#endif
-#if !TRY_VFORK
-#	undef vfork
-#	define vfork fork
-#endif
-#if !TRY_WAITPID
-#	undef waitpid
-#	define waitpid(p,s,o) wait(s)
-#endif
-
-int
-main() {
-	pid_t parent = getpid();
-	pid_t child = vfork();
-
-	if (child == 0) {
-		/*
-		 * On sparc systems, changes by the child to local and incoming
-		 * argument registers are propagated back to the parent.
-		 * The compiler is told about this with #include <vfork.h>,
-		 * but some compilers (e.g. gcc -O) don't grok <vfork.h>.
-		 * Test for this by using lots of local variables, at least
-		 * as many local variables as 'main' has allocated so far
-		 * including compiler temporaries.  4 locals are enough for
-		 * gcc 1.40.3 on a sparc, but we use 8 to be safe.
-		 * A buggy compiler should reuse the register of 'parent'
-		 * for one of the local variables, since it will think that
-		 * 'parent' can't possibly be used any more in this routine.
-		 * Assigning to the local variable will thus munge 'parent'
-		 * in the parent process.
-		 */
-		pid_t
-			p = getpid(),
-			p1 = getpid(), p2 = getpid(),
-			p3 = getpid(), p4 = getpid(),
-			p5 = getpid(), p6 = getpid(),
-			p7 = getpid();
-		/*
-		 * Convince the compiler that p..p7 are live; otherwise, it might
-		 * use the same hardware register for all 8 local variables.
-		 */
-		if (p!=p1 || p!=p2 || p!=p3 || p!=p4 || p!=p5 || p!=p6 || p!=p7)
-			_exit(1);
-
-		/*
-		 * On some systems (e.g. IRIX 3.3),
-		 * vfork doesn't separate parent from child file descriptors.
-		 * If the child closes a descriptor before it execs or exits,
-		 * this munges the parent's descriptor as well.
-		 * Test for this by closing stdout in the child.
-		 */
-		_exit(close(STDOUT_FILENO) != 0);
-
-	} else {
-		int status;
-		struct stat st;
-		exit(
-			/* Was there some problem with vforking?  */
-			child < 0
-
-			/* Was there some problem in waiting for the child?  */
-			|| waitpid(child, &status, 0) != child
-
-			/* Did the child fail?  (This shouldn't happen.)  */
-			|| status
-
-			/* Did the vfork/compiler bug occur?  */
-			|| parent != getpid()
-
-			/* Did the file descriptor bug occur?  */
-			|| fstat(STDOUT_FILENO, &st) != 0
-		);
-	}
-}
-EOF
-$PREPARE_CC || exit
-if ($CL -DTRY_VFORK=1 a.c $L && $aout) >&2
-then has_vfork=1 ok=OK
-else has_vfork=0 ok='absent or broken'
-fi
-echo >&3 $ok
-echo "#define has_vfork $has_vfork /* Does vfork() work?  */"
-h=$has_vfork
-case $h in
-0)
-	$ech >&3 "$0: configuring has_fork $dots"
-	$PREPARE_CC || exit
-	ok='does not work'
-	($CL a.c $L && $aout) >&2 && h=1 ok=OK
-	echo >&3 $ok
-esac
-echo "#define has_fork $h /* Does fork() work?  */"
+grep '#define HAVE_WORKING_V*FORK 1' auto-sussed.h
 echo "#define has_spawn 0 /* Does spawn*() work?  */"
 
 $ech >&3 "$0: configuring bad_wait_if_SIGCHLD_ignored $dots"
@@ -1040,7 +945,7 @@ cat >a.c <<EOF
 int main() {
 	signal(SIGCHLD, SIG_IGN);
 	{
-#	if has_fork
+#	if defined HAVE_WORKING_FORK
 		int status;
 		pid_t p = fork();
 		if (p < 0) {
